[package]
name = "journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
structopt = "0.3.25"
serde_json = "1.0.74"

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
